feat: add my written post delete API
